@@ -5,3 +5,6 @@ First release of the code and Bangphae data. This was used for our PLoS NTD pape
 The simulations were run on a 64-bit Ubuntu (v12.04) machine, and 
 compiled using gcc version 4.6.3 and linked to the GNU Scientific
 Library (GSL) version 1.15.
+
+March 2013
+Added options for exponentially distributed mosquito capacities and leaky vaccine.
